Import de uma fonte de texto. Criação do banner (Big Sale!) pronta. Imagens trocadas para com fundos brancos e adiciondas na main do projeto. Proxima tarefa estilizar a página.

--- a/pages/index.html
+++ b/pages/index.html
@@ -1,21 +1,129 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loja Virtual</title>
     <link rel="stylesheet" href="../Style/style.css">
 </head>
+
 <body>
     <header class="cabecalho">
-        <h1 class="cabecalho_menu_titulo">Loja Virtual Villela</h1>
-            <nav class="cabecalho_menu">
-                <a class="cabecalho_menu_link" href="index.html">Home</a>
-                <a class="cabecalho_menu_link" href="about.html">About</a>
-            </nav>
+        <h1 class="cabecalho_menu_titulo">LojaVirtual Villela</h1>
+        <nav class="cabecalho_menu">
+            <a class="cabecalho_menu_link" href="index.html">Home</a>
+            <a class="cabecalho_menu_link" href="about.html">About</a>
+        </nav>
     </header>
     <main>
-        <h2 class="">Big Sale!</h2>
+        <section class="banner">
+            <h2 class="banner_titulo">Big Sale!</h2>
+        </section>
+        <section class="main">
+            <h2 class="main_titulo">Produtos</h2>
+            <div class="produtos_container">
+                <div class="produto_card">
+                    <a href="#"><img class="produto_card_imagem"
+                            src="../Imagens/Camisa Branca Masculina.jpg"
+                            alt="Camiseta Básica Branca">
+                        <h3 class="produto_card_titulo">Camiseta Básica Branca</h3>
+                        <p class="produto_card_preco">49.90</p>
+                    </a>
+                    <a href="#"><img class="produto_card_imagem"
+                            src="../Imagens/Tenis Esportivo Masculino.jpg"
+                            alt="Camiseta Básica Branca">
+                        <h3 class="produto_card_titulo">Tênis Esportivo Running</h3>
+                        <p class="produto_card_preco">199.90</p>
+                    </a>
+                    <a href="#"><img class="produto_card_imagem"
+                            src="../Imagens/Mochila Casual Preta.jpg"
+                            alt="Mochila Casual Preta">
+                        <h3 class="produto_card_titulo">Mochila Casual Preta</h3>
+                        <p class="produto_card_preco">149.00</p>
+                    </a>
+                    <a href="#"><img class="produto_card_imagem"
+                            src="../Imagens/Relógio Analógico Masculino.png"
+                            alt="Relógio Analógico Masculino">
+                        <h3 class="produto_card_titulo">Relógio Analógico Masculino</h3>
+                        <p class="produto_card_preco">299.99</p>
+                    </a>
+                    <a href="#"><img class="produto_card_imagem"
+                            src="../Imagens/Oculos De Sol.jpg"
+                            alt="Óculos de Sol Aviador">
+                        <h3 class="produto_card_titulo">Óculos de Sol Aviador</h3>
+                        <p class="produto_card_preco">89.90</p>
+                    </a>
+                    <a href="#"><img class="produto_card_imagem"
+                            src="../Imagens/Bolsa Feminina.jpg"
+                            alt="Bolsa Feminina Transversal">
+                        <h3 class="produto_card_titulo">Bolsa Feminina Transversal</h3>
+                        <p class="produto_card_preco">119.50</p>
+                    </a>
+                    <a href="#"><img class="produto_card_imagem"
+                            src="../Imagens/Blusa Moletom Unissex.jpg"
+                            alt="Blusa de Moletom Unissex">
+                        <h3 class="produto_card_titulo">Blusa de Moletom Unissex</h3>
+                        <p class="produto_card_preco">129.90</p>
+                    </a>
+                    <a href="#"><img class="produto_card_imagem"
+                            src="../Imagens/Calça Jeans Masculina.png"
+                            alt="Calça Jeans Slim Masculina">
+                        <h3 class="produto_card_titulo">Calça Jeans Slim Masculina</h3>
+                        <p class="produto_card_preco">139.00</p>
+                    </a>
+                    <a href="#"><img class="produto_card_imagem"
+                            src="../Imagens/Vestido Estampado Floral.png"
+                            alt="Vestido Estampado Floral">
+                        <h3 class="produto_card_titulo">Vestido Estampado Floral</h3>
+                        <p class="produto_card_preco">159.90</p>
+                    </a>
+                    <a href="#"><img class="produto_card_imagem"
+                            src="../Imagens/Fone de Ouvido Bluetooth.png"
+                            alt="Fone de Ouvido Bluetooth">
+                        <h3 class="produto_card_titulo">Fone de Ouvido Bluetooth</h3>
+                        <p class="produto_card_preco">179.90</p>
+                    </a>
+                    <a href="#"><img class="produto_card_imagem"
+                            src="../Imagens/Jaqueta Jeans Feminina.png"
+                            alt="Jaqueta Jeans Feminina">
+                        <h3 class="produto_card_titulo">Jaqueta Jeans Feminina</h3>
+                        <p class="produto_card_preco">189.00</p>
+                    </a>
+                    <a href="#"><img class="produto_card_imagem"
+                            src="../Imagens/Carteira De Couro Masculina.png"
+                            alt="Carteira de Couro Masculina">
+                        <h3 class="produto_card_titulo">Carteira de Couro Masculina</h3>
+                        <p class="produto_card_preco">79.90</p>
+                    </a>
+                    <a href="#"><img class="produto_card_imagem"
+                            src="../Imagens/Sandalia Rasteira Feminina.jpg"
+                            alt="Sandália Rasteira Feminina">
+                        <h3 class="produto_card_titulo">Sandália Rasteira Feminina</h3>
+                        <p class="produto_card_preco">59.90</p>
+                    </a>
+                    <a href="#"><img class="produto_card_imagem"
+                            src="../Imagens/Boné Ajustável Estilo Trucker.png"
+                            alt="Boné Ajustável Estilo Trucker">
+                        <h3 class="produto_card_titulo">Boné Ajustável Estilo Trucker</h3>
+                        <p class="produto_card_preco">49.90</p>
+                    </a>
+                    <a href="#"><img class="produto_card_imagem"
+                            src="../Imagens/Camisa Social Masculina.png"
+                            alt="Camisa Social Masculina">
+                        <h3 class="produto_card_titulo">Camisa Social Masculina</h3>
+                        <p class="produto_card_preco">119.00</p>
+                    </a>
+                    <a href="#"><img class="produto_card_imagem"
+                            src="../Imagens/Tenias Branco Feminino.jpg"
+                            alt="Tênis Casual Branco Feminino">
+                        <h3 class="produto_card_titulo">Tênis Casual Branco Feminino</h3>
+                        <p class="produto_card_preco">189.90</p>
+                    </a>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
+
 </html>
