Paginas de produtos prontas. Criação da página about. Proximo passo, responsividade.

--- a/pages/camisetaBranca.html
+++ b/pages/camisetaBranca.html
@@ -24,9 +24,7 @@
         <section class="descricao">
             <h2 class="descricao_titulo">Camiseta Básica Branca</h2>
             <p class="descricao_preco">Preço R$49.90</p>
-            <p class="descricao_texto">Essencial no guarda-roupa, esta camiseta unissex é confeccionada em algodão de alta
-                qualidade, garantindo um toque suave na pele e excelente respirabilidade. Leve, confortável e
-                versátil, é a escolha perfeita para acompanhar sua rotina com praticidade e estilo.</p>
+            <p class="descricao_texto">Confeccionada em algodão 100% natural, esta camiseta unissex oferece um toque macio e respirável, garantindo conforto durante toda a sua rotina. Leve e com caimento perfeito, ela se adapta facilmente a diferentes estilos, sendo uma peça essencial para quem busca praticidade sem abrir mão do estilo. Ideal para combinações casuais, essa camiseta é resistente e fácil de cuidar, tornando-se a escolha perfeita para o uso diário em qualquer ocasião.</p>
             <div class="descricao_botao">
                 <a class="descricao_link" href="index.html">Voltar para produtos</a>
             </div>
