Responsividade mobile pronta

--- a/pages/carteiraCouro.html
+++ b/pages/carteiraCouro.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carteira de Couro Masculin Detalhes</title>
+    <title>Carteira de Couro Masculino Detalhes</title>
     <link rel="stylesheet" href="../Style/style.css">
 </head>
 
@@ -22,7 +22,7 @@
                 alt="Carteira de Couro Masculin">
         </section>
         <section class="descricao">
-            <h2 class="descricao_titulo">Carteira de Couro Masculin</h2>
+            <h2 class="descricao_titulo">Carteira de Couro Masculino</h2>
             <p class="descricao_preco">Preço R$79.90</p>
             <p class="descricao_texto">Esta carteira compacta foi pensada para quem valoriza funcionalidade sem abrir mão da elegância. Com múltiplas divisórias, ela permite organizar seus cartões e cédulas de forma prática e segura, facilitando o acesso ao que você precisa no dia a dia. Seu design compacto cabe facilmente no bolso ou bolsa, tornando-se o acessório ideal para quem busca praticidade aliada a um estilo discreto e sofisticado.</p>
             <div class="descricao_botao">
